--- a/my-first-app/src/index.css
+++ b/my-first-app/src/index.css
@@ -1,3 +1,13 @@
-body {
-    text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+}
+
+.movie-container {
+    background-color: whitesmoke;
 }
