--- a/my-first-app/src/index.css
+++ b/my-first-app/src/index.css
@@ -6,8 +6,30 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+    letter-spacing: 1px;
 }
 
 .movie-container {
     background-color: whitesmoke;
+    width: 100%;
+    max-width: 1200px;
+    margin: 3rem auto;
 }
+
+.each-movie {
+    background: white;
+    border: 1px solid black;
+}
+.heading{
+    margin: 1rem;
+    font-size: 25px;
+}
+
+
+@media screen and (min-width:990px) {
+    .movie-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); 
+        gap: 1.5rem;
+    }
+} 
