--- a/my-first-app/src/index.css
+++ b/my-first-app/src/index.css
@@ -3,7 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     letter-spacing: 1px;
@@ -20,7 +21,8 @@ body{
     background: white;
     border: 1px solid black;
 }
-.heading{
+
+.heading {
     margin: 1rem;
     font-size: 25px;
 }
@@ -29,7 +31,50 @@ body{
 @media screen and (min-width:990px) {
     .movie-container {
         display: grid;
-        grid-template-columns: repeat(3, 1fr); 
+        grid-template-columns: repeat(3, 1fr);
         gap: 1.5rem;
     }
-} 
+}
+
+.posts-container{
+    width: 100%;
+    height: 100%;
+    max-width: 1000px;
+    margin: 2rem auto;
+}
+
+.profile-card {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 0px 10px 2px black;
+}
+
+.profile-card img {
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+
+}
+
+.profile-card .title {
+    margin-top: 20px;
+}
+
+.profile-card a {
+    display: inline-block;
+    margin-top: 20px;
+    color: red;
+    font-size: 20px;
+    padding: 10px;
+    border: 1px solid black;
+    cursor: pointer;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+}
+@media screen and (min-width:768px) {
+    .posts-container{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 2rem;  
+    }
+}
