--- a/my-first-app/src/index.css
+++ b/my-first-app/src/index.css
@@ -78,3 +78,55 @@ body {
         gap: 2rem;  
     }
 }
+
+
+.container{
+    width: 100%;
+    height: 100%;
+    max-width: 1000px;
+    margin: 2rem auto;
+}
+.comments-container{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr; 
+    gap: 1rem;
+} 
+/*1fr = 1fr(fraction);, it means you're setting up a grid layout with one column that takes up the available space.*/
+
+li {
+list-style-type: none;
+}
+.comment{
+    background: #f3f3f3;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 7px #bcbccc;
+}
+.comment .email{
+    font-size: 16px;
+    color: #2f334d;
+}
+.comment .name{
+    color: #8c8c9c;
+    font-size:16px;
+    text-transform: capitalize;
+}
+.comment .message{
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+.comments-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+@media screen and (min-width:768px){
+    .comments-container{
+        grid-template-columns: repeat(2, 2fr);
+        gap: 1.5rem;
+    }
+}
