--- a/typescript/react-typescript/src/App.css
+++ b/typescript/react-typescript/src/App.css
@@ -11,3 +11,19 @@ display: flex;
 align-items: center;
 justify-content: space-between;
 }
+
+.App{
+  display: flex;
+  justify-content:center;
+}
+
+
+nav a {
+  margin-right: 10px;
+}
+
+nav a.active{
+font-weight: bold;
+text-decoration: none;
+color: brown;
+}
